# myrient-download

./: .gitignore  README.md  main.toml  pyproject.toml  rsync_myrient.py  update_all.toml
myrientdownload/: __init__.py  __main__.py  config copy.py  config.py  constants.py  helpers.py  logger.py  myr_download.py  myr_download_mgmt.py  myr_files.py
scripts/: run_ci_local.sh
tests/: conftest.py  test__meta.py  test_logger_unit.py  test_main.py  test_myr_downloader.py
tests/configs/: valid_no_systems.toml
